[gd_scene load_steps=7 format=2]

[ext_resource path="res://props/buttons/crate_button/crate_button.gd" type="Script" id=1]
[ext_resource path="res://props/buttons/crate_button/button_0.png" type="Texture" id=2]
[ext_resource path="res://props/buttons/crate_button/crate_button_pressed.wav" type="AudioStream" id=3]
[ext_resource path="res://props/buttons/crate_button/button_1.png" type="Texture" id=4]

[sub_resource type="AnimatedTexture" id=2]
frames = 2
fps = 0.0
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 3 )

[node name="CrateButton" type="Area2D" groups=["crate_buttons"]]
z_index = 2
z_as_relative = false
collision_layer = 256
collision_mask = 4
monitorable = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
shape = SubResource( 1 )

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_CrateButton_pressed"]
[connection signal="body_exited" from="." to="." method="_on_CrateButton_released"]
